--- a/app/src/main/res/layout/journal_entry_list_item.xml
+++ b/app/src/main/res/layout/journal_entry_list_item.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="@dimen/activity_vertical_margin">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <ImageView
         android:id="@+id/imageView"
@@ -19,8 +20,6 @@
         android:layout_gravity="center"
         android:background="@color/colorPrimary"
         android:gravity="center"
-        android:text="yes"
-
         android:textColor="@android:color/background_light"
         android:textSize="24sp"
         android:visibility="gone" />
@@ -30,10 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-
-
         android:padding="8dp">
-
         <TextView
             android:id="@+id/journal_entry_title_id"
             android:layout_width="wrap_content"
